--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </header>
 
     <body>
-        <h1>Hello world! I am Amelia. :)</h1>
+        <h1>Hello world! I am Amelia. :) Who are you?</h1>
+        <h2>:)</h2>
     </body>
 </html>
